Shrink max width to match mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@
   --danger: #b54a4a;
   --highlight: #b9f0e3;
   --overlay: rgba(5, 10, 12, 0.7);
+  --content-width: 28rem;
 
   font-family:
     "Spectral",
