--- a/src/ui/appShell.css
+++ b/src/ui/appShell.css
@@ -5,8 +5,10 @@
 }
 
 .appHeader {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
   z-index: 10;
   background: var(--surface);
   border-bottom: 1px solid var(--border);
@@ -90,7 +92,7 @@
 
 .appMain {
   flex: 1;
-  padding: 16px 0 32px;
+  padding: calc(16px + var(--app-header-height, 0px)) 0 32px;
 }
 
 .container {
